# ordered-arrowverse

./: .flake8  .gitignore  .pyup.yml  .travis.yml  Procfile  README.md  app.json  pyproject.toml  requirements.txt  requirements_to_freeze.txt  run.py  run.sh
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: lint_python_files.yml  lint_workflows.yml
ordering/: __init__.py  caching.py  constants.py  filters.py  htmls.py  models.py  settings.py  url_converters.py  utils.py  views.py
ordering/static/: ads.txt
ordering/static/css/: index.css
ordering/static/js/: bookmark-episode.js  index.js  watched.js
ordering/templates/: ads.html  analytics.html  index.html
ordering/templates/legal/: cookie_policy.html  privacy_policy.html
