[tool.poetry]
name = "ordered-arrowverse"
version = "1.1.5"
description = "A listing of all shows in the Arrowverse in watch order to ensure continuity and sensible ordering for crossover episodes"
authors = ["Jethro Muller"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9"
certifi = "^2022.9"
cssmin = "^0.2.0"
gunicorn = "^20.0"
htmlmin = "^0.1.12"
jsmin = "^2.2"
python-dateutil = "^2.8"
redis = "^3.2"
requests = "^2.26"
quart = "^0.12.0"
quart-minify = "^0.2.0"
quart-compress = "^0.2.1"
feedgen = "^0.9.0"
tortoise-orm = "^0.17.6"
asyncpg = "^0.22.0"
environs = "^8.0.0"
orjson = "^3.6.3"


[tool.poetry.dev-dependencies]
flake8 = "^3.9"
flake8-quotes = "^3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
